@@ -395,6 +395,30 @@ class TestViewConfigDecorator(unittest.TestCase):
         self.assertEqual(len(settings), 1)
         self.assertEqual(settings[0]['renderer'], {'a':1})
 
+    def test_call_with_renderer_IRendererInfo(self):
+        # see https://github.com/Pylons/pyramid/pull/234
+        from pyramid.interfaces import IRendererInfo
+        import pyramid.tests
+        class DummyRendererHelper(object):
+            implements(IRendererInfo)
+            name = 'fixtures/minimal.pt'
+            package = pyramid.tests
+        renderer_helper = DummyRendererHelper()
+        decorator = self._makeOne(renderer=renderer_helper)
+        venusian = DummyVenusian()
+        decorator.venusian = venusian
+        def foo(): pass
+        wrapped = decorator(foo)
+        self.assertTrue(wrapped is foo)
+        context = DummyVenusianContext()
+        settings = call_venusian(venusian, context)
+        self.assertEqual(len(settings), 1)
+        renderer = settings[0]['renderer']
+        self.assertFalse(renderer is renderer_helper)
+        self.assertEqual(renderer.name, 'fixtures/minimal.pt')
+        self.assertEqual(renderer.package, pyramid.tests)
+        self.assertEqual(renderer.registry, context.config.registry)
+
 class Test_append_slash_notfound_view(BaseTest, unittest.TestCase):
     def _callFUT(self, context, request):
         from pyramid.view import append_slash_notfound_view
@@ -607,8 +631,9 @@ class DummyVenusianContext(object):
     def __init__(self):
         self.config = DummyConfig()
         
-def call_venusian(venusian):
-    context = DummyVenusianContext()
+def call_venusian(venusian, context=None):
+    if context is None:
+        context = DummyVenusianContext()
     for wrapped, callback, category in venusian.attachments:
         callback(context, None, None)
     return context.config.settings
